pedir pull request

--- a/MINE 4201 - Laboratorio 0.ipynb
+++ b/MINE 4201 - Laboratorio 0.ipynb
@@ -22,6 +22,7 @@
     "\n",
     "Ejecute una a una las celdas, lo puede hacer con el botón run, o al estar parado en una celda puede ejecutarla presionando shift+enter\n",
     "\n",
+    "Si desea\n",
     "\n"
    ]
   },
